LPD-92301 SF